# diagram_code_agent

./: .dockerignore  .gitignore  LICENSE  NEXT_AI_DRAWIO_ANALYSIS.md  PLAN.md  PLAN_optimize.md  Project Aila Software Specification v1.0_EN.docx  README.MD  Template XHTD BCTC 133, 200, 99(1).xlsx  cozy-percolating-dawn.md  diagram (5).drawio  diagram(2).drawio  diagram(2).fixed.drawio  docker-compose.yml  f-code-agent-wbs-agent-diagram-agent-dia-polymorphic-starfish.md  federated-greeting-mccarthy.md  fetch_langsmith_runs.py  gi-p-t-i-c-repo-refactored-babbage.md  implementation_plan.md  innovate_inc._cloud_architecture  langsmith_export_runs_guide.md  ocr_result.json  plan.md  progress.md  proposing-the-technology-stack-drifting-hinton.md  push.ps1  run-019ea576-f252-75e1-9484-ed647de957b4.json  run-019ea5f6-baa8-7082-a6d4-e60708b19ea7.json  run-019ea612-3362-73d3-960b-bef841f0cd31.json  run-019ea62f-1371-7962-970d-23bea5d424c7(1).json  sample_diagram_code.py  snazzy-snuggling-harp.md  sorted-foraging-petal.md  subagents.mdx  test.py
backend/: .env.example  ARCHITECTURE.md  Dockerfile  config.yaml  pyproject.toml  setup_gmail_composio.py
backend/data/: case_library.json
backend/docs/: bnk_deck_sections.md
backend/evals/: README.md  _core.py  run_all.py
backend/evals/architecture/: baseline.json  judge.py  results.json  run_eval.py
backend/evals/architecture/dataset/: case_01_clean.json  case_02_dangling_edge.json  case_03_ghost_cluster.json  case_04_unmapped_requirement.json  case_05_orphan_wbs.json  case_06_zero_effort.json  case_09_async_no_dlq.json  (+3 more)
backend/evals/compliance/: baseline.json  judge.py  results.json  run_eval.py
backend/evals/deck/: baseline.json  judge.py  results.json  run_eval.py
backend/evals/diagram/: config.toml  judge.py  loop_runner.py  run_eval.py  target.py
backend/evals/diagram_quality/: baseline.json  judge.py  results.json  run_eval.py
backend/evals/e2e/: __init__.py  run_full_flow.py
backend/evals/intake/: baseline.json  judge.py  results.json  run_eval.py
backend/evals/reality_sync/: baseline.json  judge.py  results.json  run_eval.py
backend/evals/wbs/: baseline.json  judge.py  results.json  run_eval.py
backend/modal/: app.py  smoke_test.py
backend/scripts/: build_case_library.py  build_solution_memory.py  prototype_wbs_excel.py  refine_memory.py  send_wbs_email.py  test_send_email_auto_file.py  test_send_email_pdf.py
backend/skills/critic/: SKILL.md
backend/skills/diagrams-as-code/: SKILL.md
backend/skills/drawio-xml/: SKILL.md
backend/skills/ppt-generator/: SKILL.md
backend/skills/pro-style/: SKILL.md
backend/skills/requirement-analysis/: SKILL.md
backend/skills/solution-design/: SKILL.md
backend/skills/wbs-planning/: SKILL.md
backend/src/: __init__.py  adr_export.py  agent.py  aiicons.py  backends.py  calendar_tools.py  comments.py  config.py  context.py  conversations.py  csm.py  csm_adapter.py  csm_diff.py  decisions.py  deck.py  deck_resolver.py  deck_sections.py  delivery_export.py  drawio_catalog.py  email_tools.py  evidence.py  finding_store.py  findings.py  health_checks.py  icons.py  jira_adapter.py  observability.py  ppt_reporting.py  prettygraph.py  prompts.py  proposal_package.py  quality_dashboard.py  rag_tools.py  reality_sync.py  reporting.py  requirements_reader.py  safe_path.py  server.py  session_state.py  solution_validator.py  (+8 more)
backend/src/agent/: __init__.py  builder.py  constants.py  harness.py  persistence.py  streaming.py
backend/src/codevis/: __init__.py  pyclasses.py  pyimports.py  sql_schema.py
backend/src/compliance/: __init__.py
backend/src/config/: __init__.py  cors.py  models.py  settings.py
backend/src/data/: ATTRIBUTION.md
backend/src/diagram_mcp/: agent.py  architecture_advisor.py  backends.py  calendar_tools.py  config.py  email_tools.py  findings.py  gv_to_drawio.py  icons.py  mcp_client.py  node_catalog.py  prettygraph.py  prompts.py  quality_logger.py  rag_tools.py  reporting.py  server.py  shapesearch.py  tools.py  wbs_excel.py  wbs_normalizer.py  wbs_schema.py  wbs_tools.py
backend/src/document_parsers/: __init__.py  content_sniff.py  parsers.py
backend/src/domain/: __init__.py
backend/src/integrations/: __init__.py  calendar.py  email.py  meet.py
backend/src/memory/: __init__.py
backend/src/prettygraph/: audit.py  constants.py  drawio.py  erd_dsl.py  graph_builder.py  sequence_dsl.py  slide.py  state_machine_dsl.py
backend/src/prompts/: __init__.py  _blocks.py  critic_agent.py  drawer_agent.py  icon_resolver_agent.py  main_agent.py  ppt_generator_agent.py  wbs_planner_agent.py
backend/src/rag/: __init__.py  benchmarks.py  indexer.py  solution_memory.py
backend/src/routers/: chat.py  comments.py  conversations.py  upload.py
backend/src/runtime/: __init__.py  backends.py  safe_path.py  subprocess_utils.py
backend/src/security/: __init__.py  auth.py  ownership.py
backend/src/session/: __init__.py  artifacts.py  followups.py  gate_decisions.py  labels.py  normalize.py  sse.py
backend/src/tools/: __init__.py  analysis_tools.py  code_interpreter.py  constants.py  icon_tools.py  rendering_tools.py  stage_markers.py
backend/tests/: test_agent_run_limits.py  test_auth.py  test_blueprint_edge_fallback.py  test_bpmn_native.py  test_business_case.py  test_code_interpreter.py  test_collaboration.py  test_compliance.py  test_conversations_ddl.py  test_cors_config.py  test_csm.py  test_csm_diff.py  test_decisions.py  test_deck.py  test_deck_structure.py  test_delivery_export.py  test_diagram_quality.py  test_diagram_types.py  test_document_parsers_tabular.py  test_drawer_revise_gate.py  test_drawer_streamline.py  test_drawio_edit.py  test_drawio_flow.py  test_edit_entity.py  test_epistemic.py  test_epistemic_classifier.py  test_erd_native.py  test_eval_core.py  test_evidence.py  test_finalize_wbs.py  test_general_purpose_disabled.py  test_health_checks.py  test_icon_search.py  test_layout_plan.py  test_meeting_flow.py  test_middleware_order.py  test_mimo_coercion.py  test_native_engine.py  test_no_legacy_agent_module.py  test_observability.py  (+25 more)
(+275 files in other folders)
