[project]
name = "diagram-code-agent"
version = "0.1.0"
description = "A single Deep Agent (deepagents) that writes `diagrams` (mingrammer) code, renders it via custom tools, and serves it over an AG-UI SSE endpoint."
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.6",
    "langchain-openai>=1.2.0",
    "langgraph>=1.2.0",
    "langgraph-checkpoint>=4.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "diagrams>=0.23",
    "pillow>=9.0",
    "cairosvg>=2.7",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    "langsmith>=0.1",
    "langchain-mcp-adapters>=0.3.0",
]

[project.optional-dependencies]
# Only needed if you point the agent at a Claude/Anthropic model.
anthropic = ["langchain-anthropic>=0.3"]

[project.scripts]
diagram-agent-server = "diagram_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diagram_mcp"]
