[project]
name = "diagram-code-agent"
version = "0.1.0"
description = "A single Deep Agent (deepagents) that writes `diagrams` (mingrammer) code, renders it via custom tools, and serves it over an AG-UI SSE endpoint."
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.6",
    "langchain-openai>=1.2.0",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.2.0",
    "langgraph-checkpoint>=4.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "diagrams>=0.23",
    "pillow>=9.0",
    "cairosvg>=2.7",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "playwright>=1.45",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
    "langsmith>=0.1",
    "composio-langchain>=0.7.0",
    "qdrant-client>=1.9",
    "langchain-qdrant>=0.2",
    "modal>=1.5.2",
]

[project.optional-dependencies]
# Only needed if you point the agent at a Claude/Anthropic model.
anthropic = ["langchain-anthropic>=0.3"]

[project.scripts]
diagram-agent-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.editable]
path = "src"

[tool.hatch.build.targets.wheel]
include = ["src/**/*.py", "src/**/*.json", "src/**/*.xlsx", "src/**/*.png", "src/**/*.md"]
sources = {"src" = ""}

# --- Dev tooling (improvement plan §1.3) -------------------------------------
# `uv run pytest`/`ruff`/`pyright` worked in this repo before these existed as
# declared dependencies, from ad-hoc installs into the local .venv — a fresh
# `uv sync --frozen` (as CI does) would NOT have installed them, silently
# masking a broken lockfile behind the `|| uv sync` fallback CI used to have.
# `uv add --dev` fixed the lockfile; see [dependency-groups] below (uv appends
# that table itself — kept at the bottom of this file rather than moved, to
# stay a clean no-op diff on top of what `uv add` wrote).

[tool.pytest.ini_options]
testpaths = ["tests"]
# Equivalent of manually exporting PYTHONPATH=src:src/domain/... before every
# `pytest` invocation (see the memory note "Backend test harness") — the repo
# imports domain modules as flat names (e.g. `import wbs_tools`) rather than
# `domain.wbs.wbs_tools`, so every one of these directories must be on
# sys.path directly.
pythonpath = [
    "src",
    "src/domain/diagram",
    "src/domain/deck",
    "src/domain/reporting",
    "src/domain/wbs",
    "src/domain/validation",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["agent_space", "outputs", "evals/*/results.json"]

[tool.ruff.lint]
# Deliberately narrow, bug-focused hard gate — NOT the full "ALL" ruleset or
# even pyflakes' full F set. This is a large, pre-existing codebase with no
# prior lint config: running the broader stylistic rule sets (pycodestyle
# E4/E7, import sorting, unused-import F401 with 351 pre-existing hits) would
# either block every future PR on unrelated pre-existing debt or require a
# blind repo-wide autofix this pass didn't verify file-by-file. E9 (syntax
# errors) and F821/F822/F823 (undefined names — real NameError-on-use bugs,
# e.g. the `Path` forward-reference fixed in agent/middleware/phase_filter.py
# alongside this config) are unambiguous correctness bugs regardless of house
# style, so those are the CI-blocking set. See ci.yml's separate non-blocking
# `ruff check` report step for the wider, unenforced rule set to tighten into
# over time.
select = ["E9", "F821", "F822", "F823"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/agent_space", "**/outputs"]
# Mirrors [tool.pytest.ini_options].pythonpath — without this, pyright can't
# resolve the same flat domain imports pytest needs PYTHONPATH for for the
# same reason (reportMissingImports on e.g. `import delivery_export`).
extraPaths = [
    "src",
    "src/domain/diagram",
    "src/domain/deck",
    "src/domain/reporting",
    "src/domain/wbs",
    "src/domain/validation",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]
